# hack-2025

./: .gitignore  README.md  bot.py  config.py  daily_ritual_sender.py  database.py  enhanced_bot.py  instructions.txt  openai_service.py  pyproject.toml  quiz_handler.py  simple_bot.py  test_env.py  test_imports.py
