[tool.poetry]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Old Church Slavonic learning Telegram bot"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "*"}]

[tool.poetry.dependencies]
python = ">=3.11"
httpx = ">=0.25.2"
openai = ">=1.82.0"
psycopg2-binary = ">=2.9.10"
python-telegram-bot = "20.7"
python-dotenv = "^1.0.0"
